fix: hour drag issue and white space issue while deleting a column

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
   font-weight: 500;
   border-radius: 3px;
   border: transparent;
-  margin: 5px;
+  margin: 5px 0;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
@@ -141,7 +141,7 @@ input[type="checkbox"] {
 }
 
 .action-container div{
-    margin: 0 5px;
+  margin-right: 15px;
 }
 
 .collapse-container span{
